# 2026-ACM-RecSys-Challenge

./: .env.example  .gitignore  COLAB.md  README.md  pack_colab_zips.sh  run_blind_a.ipynb  run_blind_v2_local.py  run_local.sh
music-crs-baselines/: .gitignore  README.md  VERSION.txt  build_fewshot_pool.py  build_lambdamart_features.py  build_rerank_features.py  evaluate_rerank_ndcg_devset.py  pyproject.toml  recall_at_k.py  run_inference_blindset.py  run_inference_devset.py  train_dense_retriever.py  train_lambdamart.py  train_reranker.py
music-crs-baselines/config/: llama1b_bert_blindset_A.yaml  llama1b_bert_devset.yaml  llama1b_bert_ft_blindset_A.yaml  llama1b_bert_ft_devset.yaml  llama1b_bert_ft_mmr_blindset_A.yaml  llama1b_bert_rerank_blindset_A.yaml  llama1b_bm25_blindset_A.yaml  llama1b_bm25_devset.yaml  llama1b_bm25_grounded_blindset_A.yaml  llama1b_bm25_grounded_devset.yaml  llama1b_bm25_meta_blindset_A.yaml  llama1b_bm25_rerank_blindset_A.yaml  llama1b_champion_hybrid_pool1000_blindset_A.yaml  llama1b_champion_lambdamart_gpt_blindset_A.yaml  llama1b_champion_pool1000_blindset_A.yaml  llama1b_champion_v8_blindset_A.yaml  llama1b_fullstack_ce_blindset_A.yaml  llama1b_fullstack_devset.yaml  llama1b_fullstack_lgbm_blindset_A.yaml  llama1b_fullstack_rrf_blindset_A.yaml  llama1b_hybrid_bge_blindset_A.yaml  llama1b_hybrid_bge_devset.yaml  llama1b_hybrid_ft_blindset_A.yaml  llama1b_hybrid_lambdamart_devset.yaml  llama1b_lambdamart_devset.yaml  llama1b_lambdamart_hybrid_pool1000_devset.yaml  llama1b_lambdamart_pool1000_devset.yaml  llama1b_v5_lambdamart_blindset_A.yaml  (+1 more)
(+62 files in other folders)
